Fixed gaps between lines

--- a/cv/templates/cv.css
+++ b/cv/templates/cv.css
@@ -14,6 +14,7 @@ body {
 table.main {
   border: 0;
   margin: 0;
+  border-collapse: collapse;
 }
 
 tr.h0 td {
